# ax-video-sdk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_ax620q.sh  build_ax620qp.sh  build_ax630c.sh  build_ax650.sh
.github/workflows/: build-sdk.yml
design/: requirements.md
docs/: README.md  codec_types.md  demuxer.md  drawer.md  image.md  image_processor.md  jpeg_codec.md  muxer.md  pipeline.md  pipeline_manager.md  platforms.md  system.md  video_decoder.md  video_encoder.md
include/codec/: ax_codec_types.h  ax_jpeg_codec.h  ax_mp4_demuxer.h  ax_video_decoder.h  ax_video_encoder.h
include/common/: ax_drawer.h  ax_image.h  ax_image_processor.h  ax_system.h
include/pipeline/: ax_camera_pipeline.h  ax_demuxer.h  ax_muxer.h  ax_pipeline.h  ax_pipeline_manager.h
scripts/: build_common.sh
src/codec/: ax_jpeg_codec.cpp  ax_mp4_demuxer.cpp  ax_mp4_internal.h  ax_video_decoder.cpp  ax_video_decoder_ax620e.cpp  ax_video_decoder_ax650.cpp  ax_video_decoder_axcl.cpp  ax_video_decoder_internal.h  ax_video_encoder.cpp  ax_video_encoder_ax620e.cpp  ax_video_encoder_ax650.cpp  ax_video_encoder_axcl.cpp  ax_video_encoder_internal.h
src/common/: ax_image.cpp  ax_image_copy.cpp  ax_image_copy.h  ax_image_internal.h  ax_image_processor.cpp  ax_image_processor_ax620e.cpp  ax_image_processor_ax650.cpp  ax_image_processor_axcl.cpp  ax_image_processor_internal.h  ax_ivps_lock.h  ax_system.cpp
src/pipeline/: ax_camera_pipeline.cpp  ax_demuxer.cpp  ax_muxer.cpp  ax_pipeline.cpp  ax_pipeline_manager.cpp  ax_pipeline_osd_ax620e.cpp  ax_pipeline_osd_ax650.cpp  ax_pipeline_osd_axcl.cpp  ax_pipeline_osd_internal.h  ax_rtsp_internal.h  ax_v4l2_capture.cpp  ax_v4l2_capture.h
tools/: ax_cmdline_utils.h  ax_decoder_smoke.cpp  ax_image_copy_smoke.cpp  ax_image_processor_dump.cpp  ax_image_processor_smoke.cpp  ax_jpeg_smoke.cpp  ax_mp4_decode_util.h  ax_mp4_demux_probe.cpp  ax_osd_draw_smoke.cpp  ax_pipeline_frame_smoke.cpp  ax_pipeline_manager_smoke.cpp  ax_pipeline_osd_smoke.cpp  ax_pipeline_smoke.cpp  ax_pipeline_stress_smoke.cpp  ax_rtsp_transcode_smoke.cpp  ax_system_probe.cpp  ax_transcode_smoke.cpp
tools/remote/: ax650_dual_mux_gdb.sh  ax650_dual_mux_selfcheck.sh  ax650_stress_mode.sh  ax650_stress_quick.sh
